--- a/packages/cms/locale/en/lang_errors.xml
+++ b/packages/cms/locale/en/lang_errors.xml
@@ -11,7 +11,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.28 2012/03/12 05:19:20 cupreti Exp $
+* $Id: lang_errors.xml,v 1.29 2012/05/03 00:56:49 mhaidar Exp $
 *
 */
 -->
@@ -79,8 +79,8 @@
 	<error code="CMS0019">No type settings have been configured for this page - no assets will be listed</error>
 		<!-- packages/cms/page_templates/page_asset_listing/page_asset_listing.inc:241: -->
 
-	<error code="CMS0020">Supplied dynamic root node [Id: #%1$s] is in an unauthorised part of the system.  Defaulting to static root node</error>
-		<!-- packages/cms/page_templates/page_asset_listing/page_asset_listing.inc:458: -->
+	<error code="CMS0020">Supplied dynamic root node (Id: #%1$s) is in an unauthorised part of the system.  Defaulting to static root node. See Asset (Id: #%2$s)</error>
+		<!-- packages/cms/listing_engine/listing_engine.inc: -->
 
 	<error code="CMS0021">Poll question not created</error>
 		<!-- packages/cms/page_templates/page_poll/page_poll_edit_fns.inc:111: -->
