--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.412 2012/03/08 00:08:50 mhaidar Exp $
+* $Id: lang_strings.xml,v 1.413 2012/05/03 03:32:50 mhaidar Exp $
 *
 */
 
@@ -1319,6 +1319,7 @@ Force that this asset can only be viewed through a Secure (SSL) connection</stri
 	<string source="selected_asset_does_not_exist">Selected asset does not exist</string>
 	<string source="locked_types">%1$sLOCKED%2$s Types : %3$s</string>
 	<string source="failed_searching_for">Search for "%s" found nothing. Try Again</string>
+	<string source="failed_searching_for_error">Search for "%s" failed due to system error. Check error log and contact your system administrator.</string>
 	<string source="select_condition_type">Select condition type</string>
 	<string source="content_type_not_found">Content Type Asset Id : #%s not found. Please contact your system administrator</string>
 
