--- a/packages/data/data_source_ldap/locale/en/lang_screen_query.xml
+++ b/packages/data/data_source_ldap/locale/en/lang_screen_query.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_query.xml,v 1.2 2011/04/13 07:01:06 cupreti Exp $
+* $Id: lang_screen_query.xml,v 1.2.6.1 2012/05/07 01:57:01 cupreti Exp $
 *
 */
 -->
@@ -29,6 +29,10 @@
 			<display_name>Attributes To Extract</display_name>
 			<note>Enter a comma-separated list of attributes to extract from the LDAP directory</note>
 		</field>
+		<field attribute="binary_attributes">
+			<display_name>Binary Attributes To Extract</display_name>
+			<note>Enter a comma-separated list of &lt;strong&gt;binary&lt;/strong&gt; attributes to extract from the LDAP directory. &lt;em&gt;Please use these binary attributes with care as they might decrease the LDAP Data Source performance&lt;/em&gt;</note>
+		</field>		
 		<field attribute="sort_by">
 			<display_name>Sort By</display_name>
 			<note>Enter a attribute name to sort by</note>
